# phenomena

./: LICENSE  README.md  app.py  pyproject.toml
notebooks/: literature.ipynb  playground.ipynb  vector_space.ipynb
scripts/: create_disease_name_mappings.py  create_index.py  query_index.py  query_index_by_text.py
